--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Subtitle Sync</title>
+    <style>
+      div {
+        margin: 1em;
+      }
+    </style>
   </head>
   <body>
+    <form data-form>
+      <div>
+        <label>Select .ass files</label>
+        <input type="file" accept=".ass" multiple />
+      </div>
+      <div>
+        <label>Shift (in milliseconds)</label>
+        <input type="number" value="1000" />
+      </div>
+      <div>
+        <button type="button">Sync</button>
+      </div>
+    </form>
+    <a download hidden data-download />
+
+    <script src="./web_modules/jszip.min.js"></script>
     <script type="module" src="./main.mjs"></script>
   </body>
 </html>
